--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 Wed Nov 28 08:21:47 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
+	* tree.h: Add missing checks on some macros; make formatting more
+	consistent.
+
 	* stor-layout.c (put_pending_size): Look for SAVE_EXPR if not at top
 	level; only add to pending_sizes if find it.
 
