* doloop.c (doloop_modify_runtime): Properly select induction         variable; skip late entry test if biv initializer created by loop.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47423 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-28  Richard Henderson  <rth@redhat.com>
+
+	* doloop.c (doloop_modify_runtime): Properly select induction
+	variable; skip late entry test if biv initializer created by loop.
+
 Wed Nov 28 08:21:47 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 	* tree.h (EXPR_WFL_LINECOL): Used by Java in node other than
