--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2001-11-28  Richard Henderson  <rth@redhat.com>
 
+	* config/alpha/alpha.md (sibcall_osf_1, sibcall_value_osf_1): Use
+	symbolic_operand as the predicate.
+
+2001-11-28  Richard Henderson  <rth@redhat.com>
+
 	* doloop.c (doloop_modify_runtime): Properly select induction
 	variable; skip late entry test if biv initializer created by loop.
 
