* misc.c (gnat_expand_constant): Move declaration above 	definition of lang_hooks. 	(LANG_HOOKS_EXPAND_CONSTANT): Set to gnat_expand_constant. 	(gnat_init): lang_expand_constant no longer exists.
	(internal_error_function): Remove #ifdef HAVE_VPRINTF.  We
	always have vprintf.
	(gnat_init): Always call set_internal_error_function.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47426 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,14 @@
+2001-11-28  Zack Weinberg  <zack@codesourcery.com>
+
+	* misc.c (gnat_expand_constant): Move declaration above
+	definition of lang_hooks.
+	(LANG_HOOKS_EXPAND_CONSTANT): Set to gnat_expand_constant.
+	(gnat_init): lang_expand_constant no longer exists.
+
+	(internal_error_function): Remove #ifdef HAVE_VPRINTF.  We
+	always have vprintf.
+	(gnat_init): Always call set_internal_error_function.
+
 2001-11-27  Andreas Jaeger  <aj@suse.de>
 
 	* Makefile.in (stamp-tool_src_dir): Use symbolic link.
