* init.c: (__gnat_install_handler,VMS): Increase size of alternate 	signal stack.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47427 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-28  Doug Rupp <rupp@gnat.com>
+
+	* init.c: (__gnat_install_handler,VMS): Increase size of alternate 
+	signal stack.
+
 2001-11-28  Zack Weinberg  <zack@codesourcery.com>
 
 	* misc.c (gnat_expand_constant): Move declaration above
