* init.c: Minor whitespace changes.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47429 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,7 @@
+2001/11/28  Geert Bosch <bosch@gnat.com>
+
+	* init.c: Minor whitespace changes.
+
 2001-11-28  Doug Rupp <rupp@gnat.com>
 
 	* init.c: (__gnat_install_handler,VMS): Increase size of alternate 
