* config/cris/cris.c: Remove whitespace at end of line.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47430 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-28  Hans-Peter Nilsson  <hp@axis.com>
+
+	* config/cris/cris.c: Remove whitespace at end of line.
+
 Wed Nov 28 14:51:23 2001  Douglas B. Rupp  <rupp@gnat.com>
 
 	* config.gcc (i[34567]86-*-interix3*): New case.
