* alpha.md (tablejump): Use pic_offset_table_rtx 	instead of gen_rtx_REG.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47436 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Thu Nov 29 00:24:15 EST 2001  John Wehle  (john@feith.com)
+
+	* alpha.md (tablejump): Use pic_offset_table_rtx
+	instead of gen_rtx_REG.
+
 Wed Nov 28 15:36:13 2001  Jeffrey A Law  (law@cygnus.com)
 
 	* expr.c (store_expr): When copying a string constant into an
