--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-11-29  Nick Clifton  <nickc@cambridge.redhat.com>
+
+	* config/arm/crti.asm (_init): Add .thumb_func if compiled
+        with -mthumb.
+        (_fini): Add .thumb_func if compiled with -mthumb.
+
 2001-11-28  Eric Christopher  <echristo@redhat.com>
 
 	* config/mips/mips.c (override_options): Fix thinko in mips_tune
