--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-29  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* Make-lang.in (ada.generated-manpages): New dummy target.
+
 2001-11-29  Ed Schonberg <schonber@gnat.com>
 
 	* g-os_lib.adb (Add_To_Command): use explicit loop to move string 
