--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,12 @@
+2001-11-29  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* Make-lang.in (f77.generated-manpages): New target.
+	($(srcdir)/f/g77.1): Don't check $(GENERATED_MANPAGES).  Allow
+	manpage generation to fail.
+	(f77.info): Don't depend on $(srcdir)/f/g77.1.
+	(f77.install-man): Depend on $(GENERATED_MANPAGES) rather than
+	directly on $(srcdir)/g77.1.
+
 2001-11-24  Toon Moene  <toon@moene.indiv.nluug.nl>
 
 	PR fortran/3957
