--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-29  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* Makefile.in (insn-output.o): Depend on insn-codes.h.
+
 2001-11-29  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* configure.in (target_list): Add generated-manpages.
