--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2001-11-29  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/3471
+	* call.c (convert_like_real): Do not build additional temporaries
+	for rvalues of class type.
+
 2001-11-28  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* cp-tree.h (UNIQUELY_DERIVED_FROM_P): Use lookup base.
