--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,13 @@
 2001-11-29  Mark Mitchell  <mark@codesourcery.com>
 
+	PR c++/4842
+	* class.c (get_basefndecls): Take an IDENTIFIER_NODE, not a
+	FUNCTION_DECL, as input.
+	(mark_overriders): Remove.
+	(warn_hidden): Rework for the new ABI.
+
+2001-11-29  Mark Mitchell  <mark@codesourcery.com>
+
 	PR c++/3471
 	* call.c (convert_like_real): Do not build additional temporaries
 	for rvalues of class type.
