--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-29  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c (ASM_DEBUG_SPEC): Only check HAVE_AS_G*_DEBUG_FLAG
+	macros for the supported debugging types.
+
 2001-11-29  Craig Rodrigues  <rodrigc@gcc.gnu.org>
 
 	PR other/4932
