* c-lex.c (init_c_lex): Canonicalize "-" filename to "".
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47461 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2001-11-29  Jakub Jelinek  <jakub@redhat.com>
 
+	* c-lex.c (init_c_lex): Canonicalize "-" filename to "".
+
+2001-11-29  Jakub Jelinek  <jakub@redhat.com>
+
 	* gcc.c (ASM_DEBUG_SPEC): Only check HAVE_AS_G*_DEBUG_FLAG
 	macros for the supported debugging types.
 
