--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2001-11-30  Jason Merrill  <jason@redhat.com>
+
+	* dwarf2out.c (add_data_member_location_attribute): Do the
+	right thing for virtual bases.
+	* dbxout.c (dbxout_type): For a virtual base, print the offset
+	within the vtable.
+
 2001-11-29  Zoltan Hidvegi  <hzoli@hzoli.2y.net>
 
 	* doloop.c (doloop_valid_p): Check for LTU and GTU as well.
