--- a/gcc/doc/configterms.texi
+++ b/gcc/doc/configterms.texi
@@ -37,7 +37,7 @@ different system.  Some people call this a @dfn{host-x-host},
 @dfn{crossed native}, or @dfn{cross-built native}.  If build and target
 are the same, but host is different, you are using a cross compiler to
 build a cross compiler that produces code for the machine you're
-building on.  This is rare, so there is no common say of describing it
+building on.  This is rare, so there is no common way of describing it
 (although I propose calling it a @dfn{crossback}).
 
 If build and host are the same, the GCC you are building will also be
@@ -57,9 +57,8 @@ process will adjust these variables as needed.  It also sets
 @code{$with_cross_host} to the original @option{--host} value in case you
 need it.
 
-Libiberty, for example, is built twice.  The first time, host comes from
-@option{--host} and the second time host comes from @option{--target}.
-Historically, libiberty has not been built for the build machine,
-though, which causes some interesting issues with programs used to
-generate sources for the build.  Fixing this, so that libiberty is built
-three times, has long been on the to-do list.
+The @code{libiberty} support library is built up to three times: once
+for the host, once for the target (even if they are the same), and once
+for the build if build and host are different.  This allows it to be
+used by all programs which are generated in the course of the build
+process.
