--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-30  Daniel Berlin  <dan@cgsoftware.com>
+
+	* genopinit.c (gen_insn): Handle MODE_VECTOR_INT and
+	MODE_VECTOR_FLOAT as allowed.
+
 2001-11-29  Zack Weinberg  <zack@codesourcery.com>
 
 	Purge cruft now we have build libiberty.
