--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-30  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* class.c (add_interface_do): Set BINFO_VPTR_FIELD.
+
 2001-11-29  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* Make-lang.in (java.generated-manpages): New dummy target.
