--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Fri Nov 30 08:26:57 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* dwarf2asm.c (dw2_asm_output_encoded_addr_rtx): Handle const1_rtx.
+
 2001-11-30  Daniel Berlin  <dan@cgsoftware.com>
 
 	* genopinit.c (gen_insn): Handle MODE_VECTOR_INT and
